# aws-account-security-toolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES.md  app.py  cdk.json  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  control_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  control-catalog.md
lambdas/: cloudtrail_change_notifier.py  compromised_key_responder.py  iam_posture_scanner.py  kms_change_notifier.py  root_login_notifier.py  s3_public_access_guard.py  security_hub.py  sensitive_api_change_notifier.py  stale_access_key_quarantine.py
policies/: deny-unapproved-regions-scp.json
stacks/: security_toolkit_stack.py
tests/: conftest.py  test_cloudtrail_change_notifier.py  test_compromised_key_responder.py  test_iam_posture_scanner.py  test_kms_change_notifier.py  test_root_login_notifier.py  test_s3_public_access_guard.py  test_security_hub.py  test_sensitive_api_change_notifier.py  test_stack.py  test_stale_access_key_quarantine.py
