[project]
name = "aws-account-security-toolkit"
version = "0.2.0"
description = "Deployable AWS account security guardrails and responder automations built with AWS CDK."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "aws-cdk-lib>=2.247.0,<3.0.0",
  "constructs>=10.5.0,<11.0.0",
]

[dependency-groups]
dev = [
  "boto3",
  "pre-commit",
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
